overflow  fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@
 html,
 body {
   max-width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   background: #090B1D;
 }
 
